[package]
name = "PasswordManager"
version = "0.1.0"
edition = "2024"
description = "Application de gestion de mot de passe en TUI"
authors = ["erdemcasa"]


[dependencies]
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.30.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true