[package]
name = "PasswordManager"
version = "0.1.0"
edition = "2024"
description = "Application de gestion de mot de passe en TUI"
authors = ["erdemcasa"]


[dependencies]
ratatui = {version = "0.30.0", features = ["all-widgets"]}
color-eyre = "0.6.5"
argon2 = {version = "0.5.3"}
rand_core = {version = "0.6", features = ["getrandom"]}